style: resolve issue preventing full height on mobile devices

--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -24,7 +24,7 @@
 
     .side-left {
         width: 51%;
-        height: 100%;
+        height: 100lvh;
         position: absolute;
         top: 0;
         left: 0;
@@ -38,7 +38,7 @@
 
     .side-right {
         width: 50%;
-        height: 100%;
+        height: 100lvh;
         position: absolute;
         top: 0;
         right: 0;
